--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
         function playMusic() {
             if (!audio) {
                 // Create audio element (using a placeholder URL)
-                audio = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3');
+                audio = new Audio('https://b.top4top.io/m_3579cof8c1.mp3');
                 audio.loop = true;
             }
             
